Bug 410508 - Wrong tool bar icon for adding 'activity' widgets
Summary: Wrong tool bar icon for adding 'activity' widgets
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.28.3 (KDE Applications 19.04.3)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-02 05:25 UTC by Ralf Habacker
Modified: 2019-08-02 11:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.29.0 (KDE Applications 19.08.0)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-08-02 05:25:24 UTC
The symbol in the toolbar for adding activities to activity diagrams does not correspond to the representation of activities, it shows the symbol for use cases.

STEPS TO REPRODUCE
1. start umbrello
2. add activity diagram

OBSERVED RESULT
The use case icon is displayed in the toolbar for adding activities

EXPECTED RESULT
There should be displayed the correct icon
Comment 1 Ralf Habacker 2019-08-02 05:26:57 UTC
Git commit d26fa52582c327de209dad94da66e5dbe86be59c by Ralf Habacker.
Committed on 02/08/2019 at 05:26.
Pushed by habacker into branch 'Applications/19.08'.

New icon for activities added to toolbar and context menu

Previously, the UseCase icon was used for this.
FIXED-IN:2.28.90 (KDE Applications 19.11.90)

M  +1    -1    umbrello/icon_utils.cpp
M  +2    -0    umbrello/pics/CMakeLists.txt
A  +-    --    umbrello/pics/activity.png
A  +-    --    umbrello/pics/cursor-activity.png
A  +201  -0    umbrello/pics/sources/activity.svg

https://commits.kde.org/umbrello/d26fa52582c327de209dad94da66e5dbe86be59c