New icon for activities added to toolbar and context menu

Previously, the UseCase icon was used for this.

BUG:410508
FIXED-IN:2.28.90 (KDE Applications 19.11.90)